--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@types/node": "^18.11.9",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
+    "@volar/vue-language-plugin-pug": "^1.2.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "sass": "^1.55.0",
     "typescript": "^4.0.0",
     "vite": "^3.1.9",
