--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "core-js": "^3.8.3",
+    "node-sass": "^8.0.0",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
+    "sass-loader": "^13.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
