--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "core-js": "^3.8.3",
+    "fetch-retry": "^5.0.4",
     "node-sass": "^8.0.0",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
